logstash/networkpolicy-allow-apigateway-to-logstash.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-apigateway-to-logstash
spec:
  podSelector:
    matchLabels:
      deploymentconfig: logstash-git
  ingress:
    - ports:
        - protocol: TCP
          port: 8001
        - protocol: TCP
          port: 8002
      from:
        - namespaceSelector:
            matchLabels:
              environment: prod
              name: 264e6f
    - ports:
        - protocol: TCP
          port: 8001
        - protocol: TCP
          port: 8002
      from:
        - namespaceSelector:
            matchLabels:
              environment: test
              name: 264e6f
  policyTypes:
    - Ingress
