logstash/networkpolicy-allow-ownpods-to-logstash.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ownpods-to-logstash
spec:
  podSelector:
    matchLabels:
      deployment: logstash-local
  ingress:
    - ports:
        - protocol: TCP
          port: 8001
      from:
        - podSelector: {}
policyTypes:
    - Ingress
